--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+  </head>
+  <body>
+    <h1 class="score"></h1>
+    <div class="results"></div>
+    <button class="rock">Rock</button>
+    <button class="paper">paper</button>
+    <button class="scissors">scissors</button>
     <script src="./main.js"></script>
-</head>
-<body>
-    
-</body>
+  </body>
 </html>
